--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <label for="LastName">Last Name</label><br>
           <input type="text" id="lName" name="LastName"><br><br>
           <div id="buttonSave">
-            <button type="reset" onclick="StartFunc()">Save</button>
+            <button type="reset" onclick="startInfo()">Save</button>
           </div>
         </form>
       </div>
