--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div id="headDiv">
     <div>
       <div id="buttonDiv">
-        <button id="SwitchButton" type="button" onclick="Switch()">Switch</button>
+        <button id="SwitchButton" type="button" onclick="Reverse()">Switch</button>
         <button id="AddButton" type="button" onclick="openAddUser()">Add User</button>
       </div>
       <div id="TandF">
@@ -61,7 +61,7 @@
           <label for="LastName">Last Name</label><br>
           <input type="text" id="lName" name="LastName"><br><br>
           <div id="buttonSave">
-            <button type="reset" onclick="saveFunc()">Save</button>
+            <button type="reset" onclick="saveUser()">Save</button>
           </div>
         </form>
       </div>
